# Sentinal-AI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  reset.sh  sentinel.service  setup.sh
